--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ pygmentscodefencesguesssyntax = true
 paginate=5 # articles per page
 
 [params]
-	mode = "toggle" # color-mode → light,dark,toggle or auto
+	mode = "dark" # color-mode → light,dark,toggle or auto
 	useCDN = false # don't use CDNs for fonts and icons, instead serve them locally.
 	subtitle = "Minimal and Clean [blog theme for Hugo](https://github.com/athul/archie)"
 	mathjax = true # enable MathJax support
