--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://cortajarena.github.io/"
 languageCode = "en-us"
-title = "_c∅rtajarena"
+title = "c∅rtajarena:~$"
 theme="archie"
 copyright = "© Athul"
 # Code Highlight
