--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/archie"]
-	path = themes/archie
-	url = https://github.com/athul/archie.git
+[submodule "themes/hugo-brewm"]
+	path = themes/hugo-brewm
+	url = https://github.com/foxihd/hugo-brewm
