--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,7 +1,7 @@
 ## Base URL for the site
 baseURL = 'https://cortajarena.github.io'
 ## Site title
-title = 'Example'
+title = 'CNVX'
 ## Use hugo-brewm theme
 theme = 'hugo-brewm'
 ## Enable Git information for pages, (e.g. lastMod date information)
